Convert SpringBootTest to MockitoExtension for final GA tests and unstable tests